# maemo-statusmenu-fmtx

./: configure.ac
data/: Makefile.am  fmtx.desktop  maemo-statusmenu-fmtx.schemas
debian/: changelog  control  copyright  install  postinst  rules
src/: Makefile.am  fmtx_status_menu_item.c
