desktoplib_LTLIBRARIES = fmtx_status_menu_item.la
desktoplibdir = $(HILDON_DESKTOP_LIB_DIR)

fmtx_status_menu_item_la_SOURCES = fmtx_status_menu_item.c
fmtx_status_menu_item_la_CFLAGS = $(FMTXSTATUSMENUITEM_CFLAGS)
fmtx_status_menu_item_la_LDFLAGS = -module -avoid-version
fmtx_status_menu_item_la_LIBADD = $(FMTXSTATUSMENUITEM_LIBS)
